deploy: 993e1b7d7da1da9e8d9d23cbba2018d9adaa985f

--- a/lectures/07_c4.html
+++ b/lectures/07_c4.html
@@ -3,7 +3,7 @@
     <head>
         <!-- Book generated using mdBook -->
         <meta charset="UTF-8">
-        <title>user story mapping - handout</title>
+        <title>C4 - handout</title>
 
 
         <!-- Custom HTML head -->
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../lectures/HOME.html">home</a></li><li class="chapter-item expanded affix "><a href="../lectures/00_intro.html">introduction</a></li><li class="chapter-item expanded affix "><a href="../lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="../lectures/02_scrum.html">scrum</a></li><li class="chapter-item expanded affix "><a href="../lectures/03_kanban.html">kanban</a></li><li class="chapter-item expanded affix "><a href="../lectures/04_requirement_analysis.html">requirement analysis</a></li><li class="chapter-item expanded affix "><a href="../lectures/05_user_story_mapping.html" class="active">user story mapping</a></li><li class="chapter-item expanded affix "><a href="../lectures/06_uml.html">UML</a></li><li class="chapter-item expanded affix "><a href="../lectures/07_c4.html">C4</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="../lectures/HOME.html">home</a></li><li class="chapter-item expanded affix "><a href="../lectures/00_intro.html">introduction</a></li><li class="chapter-item expanded affix "><a href="../lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="../lectures/02_scrum.html">scrum</a></li><li class="chapter-item expanded affix "><a href="../lectures/03_kanban.html">kanban</a></li><li class="chapter-item expanded affix "><a href="../lectures/04_requirement_analysis.html">requirement analysis</a></li><li class="chapter-item expanded affix "><a href="../lectures/05_user_story_mapping.html">user story mapping</a></li><li class="chapter-item expanded affix "><a href="../lectures/06_uml.html">UML</a></li><li class="chapter-item expanded affix "><a href="../lectures/07_c4.html" class="active">C4</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -176,168 +176,219 @@
 
                 <div id="content" class="content">
                     <main>
-                        <h1 id="the-problem"><a class="header" href="#the-problem">the problem</a></h1>
+                        <h1 id="what-is-the-issue-with-uml"><a class="header" href="#what-is-the-issue-with-uml">what is the issue with UML?</a></h1>
 <ul>
-<li>the backlog difficult to prioritize
+<li>closely connected with OOP</li>
+<li>propagates object-oriented modelling
 <ul>
-<li>identify dependencies</li>
-<li>already at this point the tasks need detailed understanding</li>
-</ul>
-</li>
-<li>the backlog is one dimensional
-<ul>
-<li>priority</li>
+<li>however the design should not consider the implementation</li>
 </ul>
 </li>
 </ul>
-<h1 id="user-story-map"><a class="header" href="#user-story-map">user story map</a></h1>
-<p><img src="figures/user_story_map.drawio.svg" alt="" /></p>
-<div class="notes">
+<h1 id="c4-model"><a class="header" href="#c4-model">C4 model</a></h1>
 <ul>
-<li>two dimensional</li>
-<li>consists of three elements
-<ol>
-<li>activities</li>
-<li>steps</li>
-<li>details</li>
-</ol>
-</li>
-</ul>
-</div>
-<h2 id="activity"><a class="header" href="#activity">activity</a></h2>
-<div class="columns">
-<div class="column" width="50%">
+<li>hierarchical set of software architecture diagrams
 <ul>
-<li>is sort of a big thing that people do</li>
-<li>that has lots of steps,</li>
-<li>and doesn’t always have a precise workflow</li>
-</ul>
-<p>activities are still user stories with roles</p>
-</div>
-<div class="column text-size-2" width="50%">
-<pre><code>As a social media platform user
-I want to follow users
-so I can keep up with their posts.
-</code></pre>
-</div>
-</div>
-<div class="notes">
-<p>An activity is close to an epic in the scrum literature.</p>
-</div>
-<h2 id="user-task"><a class="header" href="#user-task">user task</a></h2>
-<div class="columns">
-<div class="column" width="55%">
-<ul>
-<li>in agile a “task” refers to the things that <em>developers</em> do
-<ul>
-<li>to finish user stories</li>
+<li>different levels of abstraction for different audience</li>
 </ul>
 </li>
-<li>user story mapping considers the <em>user</em>,
+<li>has four levels:
 <ul>
-<li>so a user task is what a user needs to do to complete an activity</li>
+<li>context, containers, components and code</li>
 </ul>
 </li>
+<li>popularized by Simon Brown</li>
 </ul>
+<div class="text-smaller mt-3">
+<p>this chapter is based on <a href="https://c4model.com/">c4model.com</a></p>
 </div>
-<div class="column" width="45%">
-<p>for example (follow a user)</p>
-<ol>
-<li>search for user</li>
-<li>add user to followed list</li>
-</ol>
-</div>
-</div>
-<!--## details
-&#10;search for user
-&#10;:   - type username
-    - browse the result lists
-    - click to the "follow" button-->
-<h2 id=""><a class="header" href="#"></a></h2>
+<h1 id="level-1-system-context-diagram"><a class="header" href="#level-1-system-context-diagram">Level 1: System Context diagram</a></h1>
+<ul>
+<li>high level relation with other systems or users</li>
+<li>similar to use case diagram</li>
+<li>technologies, protocols and other low-level details are not important</li>
+<li>understandable for non-technical people</li>
+</ul>
+<blockquote>
+<p>Shows the software system you are building and how it fits into the
+world in terms of the people who use it and the other software systems
+it interacts with.</p>
+<p>Simon Brown - <a href="https://www.infoq.com/articles/C4-architecture-model/">The C4 Model for Software
+Architecture</a></p>
+</blockquote>
+<h2 id="system-context-example"><a class="header" href="#system-context-example">system context example</a></h2>
 <figure>
-<img src="figures/borrowed/split_restaurant_bill.jpg"
-style="width:80.0%"
-alt="from “Quickstart Guide to User Story Mapping” by Eben Halford | CC BY-SA 2.5" />
-<figcaption aria-hidden="true">from “Quickstart Guide to User Story
-Mapping” by Eben Halford | CC BY-SA 2.5</figcaption>
+<img src="figures/borrowed/c4/SystemContext.png" height="550"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
 </figure>
-<h1 id="user-story-mapping"><a class="header" href="#user-story-mapping">user story mapping</a></h1>
+<h2 id="notation"><a class="header" href="#notation">notation</a></h2>
+<figure>
+<img src="figures/borrowed/c4/SystemContext-key.png"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h1 id="level-2-container-diagram"><a class="header" href="#level-2-container-diagram">Level 2: Container diagram</a></h1>
 <ul>
-<li>popularized by Jeff Patton
+<li></li>
+</ul>
+<blockquote>
+<p>Zooms into the software system, and shows the containers
+(applications, data stores, microservices, etc.) that make up that
+software system. Technology decisions are also a key part of this
+diagram.</p>
+<p>Simon Brown - <a href="https://www.infoq.com/articles/C4-architecture-model/">The C4 Model for Software
+Architecture</a></p>
+</blockquote>
+<h2 id="container-example"><a class="header" href="#container-example">container example</a></h2>
+<figure>
+<img src="figures/borrowed/c4/Containers.png" height="550"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h2 id="notation-1"><a class="header" href="#notation-1">notation</a></h2>
+<figure>
+<img src="figures/borrowed/c4/Containers-key.png"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h1 id="level-3-component-diagram"><a class="header" href="#level-3-component-diagram">Level 3: Component diagram</a></h1>
+<blockquote>
+<p>Zooms into an individual container to show the components inside it.
+These components should map to real abstractions (e.g., a grouping of
+code) in your codebase.</p>
+<p>Simon Brown - <a href="https://www.infoq.com/articles/C4-architecture-model/">The C4 Model for Software
+Architecture</a></p>
+</blockquote>
+<h2 id="component-example"><a class="header" href="#component-example">component example</a></h2>
+<figure>
+<img src="figures/borrowed/c4/Components.png" height="550"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h2 id="notation-2"><a class="header" href="#notation-2">notation</a></h2>
+<figure>
+<img src="figures/borrowed/c4/Components-key.png"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h1 id="level-4-code"><a class="header" href="#level-4-code">Level 4: Code</a></h1>
+<blockquote>
+<p>Finally, if you really want or need to, you can zoom into an
+individual component to show how that component is implemented.</p>
+<p>Simon Brown - <a href="https://www.infoq.com/articles/C4-architecture-model/">The C4 Model for Software
+Architecture</a></p>
+</blockquote>
+<h2 id="code-example"><a class="header" href="#code-example">code example</a></h2>
+<figure>
+<img src="figures/borrowed/c4/MainframeBankingSystemFacade.png"
+height="500" alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h1 id="additional-diagrams-in-c4-model"><a class="header" href="#additional-diagrams-in-c4-model">additional diagrams in C4 model</a></h1>
 <ul>
-<li><a href="https://jpattonassociates.com/the-new-backlog/">original blog post</a></li>
-<li>User Story Mapping, O’Reilly, 2014, ISBN-13: 978-1491904909</li>
+<li>system landscape diagram
+<ul>
+<li>even broader environment than the system context diagram</li>
 </ul>
 </li>
-<li>performed in workshops including
+<li>dynamic diagram
 <ul>
-<li>users,</li>
-<li>(UI) designers,</li>
-<li>developers,</li>
-<li>testers,</li>
-<li>and stakeholders</li>
+<li>based on the UML communication and sequence diagrams</li>
 </ul>
 </li>
-<li>build a shared understanding of the product and a common language</li>
-</ul>
-<h2 id="user-story-map-as-a-document"><a class="header" href="#user-story-map-as-a-document">user story map as a document</a></h2>
+<li>deployment diagram
 <ul>
-<li>not final, not set in stone</li>
-<li>it is possible and encouraged to adjust<br>as the more knowledge is
-acquired about the software
-<ul>
-<li>versioning</li>
-</ul>
+<li>based on the UML deployment diagram<!--    - audience: technical people inside and outside of the software development team
+      - software architects, developers, infrastructure architects, and operations/support staff-->
 </li>
-<li>you are free to move notes up and down
-<ul>
-<li>change the role (activity ↔ user task)</li>
 </ul>
 </li>
 </ul>
-<h1 id="backbone-skeleton-ribs"><a class="header" href="#backbone-skeleton-ribs">backbone, skeleton, ribs</a></h1>
-<p><img src="figures/user_story_map_bones.drawio.svg" alt="" /></p>
-<h2 id="iterations"><a class="header" href="#iterations">iterations</a></h2>
-<p><img src="figures/user_story_map_increments.drawio.svg" alt="" /></p>
-<h1 id="social-media-platform---example"><a class="header" href="#social-media-platform---example">social media platform - example</a></h1>
-<p><img src="figures/social_media_platform/usm_sign_up.drawio.svg" alt="" /></p>
-<h1 id="user-story-mapping-mistakes"><a class="header" href="#user-story-mapping-mistakes">user story mapping mistakes</a></h1>
+<h2 id="system-landscape-diagram"><a class="header" href="#system-landscape-diagram">system landscape diagram</a></h2>
+<figure>
+<img src="figures/borrowed/c4/SystemLandscape.png" height="550"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h2 id="dynamic-diagram-collaboration-style"><a class="header" href="#dynamic-diagram-collaboration-style">dynamic diagram (collaboration style)</a></h2>
+<figure>
+<img src="figures/borrowed/c4/SignIn.png" height="550"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h2 id="dynamic-diagram-sequence"><a class="header" href="#dynamic-diagram-sequence">dynamic diagram (sequence)</a></h2>
+<figure>
+<img src="figures/borrowed/c4/bigbankplc-SignIn-sequence.png"
+height="550" alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
+<h2 id="deployment-diagram"><a class="header" href="#deployment-diagram">deployment diagram</a></h2>
 <div class="columns">
-<div class="column" width="50%">
-<img src="figures/usm_too_many_details.drawio.svg" height="450" />
+<div class="column text-smaller" width="40%">
+<ul>
+<li>s where an instance of a software system is running e.g.,
+<ul>
+<li>physical infrastructure (e.g. a physical server or device)</li>
+<li>virtualised infrastructure,</li>
+<li>containerised infrastructure (e.g. a Docker container),</li>
+<li>an execution environment (e.g. a database server, Java EE
+web/application server, Microsoft IIS), etc.</li>
+</ul>
+</li>
+<li>deployment nodes can be nested</li>
+</ul>
 </div>
-<div class="column" width="50%">
-<div class="r-stack">
-<div class="fragment">
-<img src="figures/usm_whole_story_first.drawio.svg" height="450" />
-</div>
-<div class="fragment">
-<p><img src="figures/usm_whole_story_first_verbs.drawio.svg"
-height="450" /></p>
-</div>
-<div class="fragment">
-<p><img src="figures/usm_whole_story_first_extra.drawio.svg"
-height="450" /></p>
+<div class="column" width="60%">
+<figure>
+<img src="figures/borrowed/c4/LiveDeployment.png"
+alt="from c4model.com | CC-BY" />
+<figcaption aria-hidden="true">from <a
+href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
+</figure>
 </div>
 </div>
+<h1 id="summary"><a class="header" href="#summary">summary</a></h1>
+<blockquote>
+<p>overview first, zoom and filter, then details on demand</p>
+<p>– Ben Shneiderman</p>
+</blockquote>
+<h1 id="suggested-software"><a class="header" href="#suggested-software">suggested software</a></h1>
+<div class="columns">
+<div class="column" width="70%">
+<ul>
+<li><a href="https://docs.google.com/drawings">Google Drawings</a>
+<ul>
+<li>it does not have a person shape though, but can be constucted from a
+circle and a rectange</li>
+</ul>
+</li>
+<li>Visio</li>
+</ul>
 </div>
+<div class="column" width="30%">
+<p><img src="figures/c4_drawings_person_shape.png" alt="" /></p>
 </div>
-<div class="text-smaller">
-<p>more from Jeff Patton: <a href="https://jpattonassociates.com/5-story-mapping-mistakes/">5 story mapping
-mistakes</a></p>
 </div>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="../lectures/04_requirement_analysis.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="../lectures/06_uml.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
 
-                            <a rel="next prefetch" href="../lectures/06_uml.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                                <i class="fa fa-angle-right"></i>
-                            </a>
 
                         <div style="clear: both"></div>
                     </nav>
@@ -345,13 +396,10 @@ mistakes</a></p>
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="../lectures/04_requirement_analysis.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="../lectures/06_uml.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
 
-                    <a rel="next prefetch" href="../lectures/06_uml.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
-                        <i class="fa fa-angle-right"></i>
-                    </a>
             </nav>
 
         </div>
