--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded affix "><a href="lectures/HOME.html" class="active">home</a></li><li class="chapter-item expanded affix "><a href="lectures/00_intro.html">introduction</a></li><li class="chapter-item expanded affix "><a href="lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="lectures/02_scrum.html">scrum</a></li><li class="chapter-item expanded affix "><a href="lectures/03_kanban.html">kanban</a></li><li class="chapter-item expanded affix "><a href="lectures/04_requirement_analysis.html">requirement analysis</a></li><li class="chapter-item expanded affix "><a href="lectures/05_user_story_mapping.html">user story mapping</a></li><li class="chapter-item expanded affix "><a href="lectures/06_uml.html">UML</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded affix "><a href="lectures/HOME.html" class="active">home</a></li><li class="chapter-item expanded affix "><a href="lectures/00_intro.html">introduction</a></li><li class="chapter-item expanded affix "><a href="lectures/01_sdlc.html">software development life cycle</a></li><li class="chapter-item expanded affix "><a href="lectures/02_scrum.html">scrum</a></li><li class="chapter-item expanded affix "><a href="lectures/03_kanban.html">kanban</a></li><li class="chapter-item expanded affix "><a href="lectures/04_requirement_analysis.html">requirement analysis</a></li><li class="chapter-item expanded affix "><a href="lectures/05_user_story_mapping.html">user story mapping</a></li><li class="chapter-item expanded affix "><a href="lectures/06_uml.html">UML</a></li><li class="chapter-item expanded affix "><a href="lectures/07_c4.html">C4</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle">
                 <div class="sidebar-resize-indicator"></div>
@@ -278,12 +278,15 @@ Diagram</a></li>
 <ol>
 <li><a href="/software-engineering/slides/summary_week03.html">week 3 summary</a></li>
 <li><a href="/software-engineering/slides/06_uml.html">UML</a></li>
-<li>C4</li>
+<li><a href="/software-engineering/slides/07_c4.html">C4</a></li>
 </ol>
 <h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
 <p>C4 model</p>
 <ul>
 <li><a href="https://c4model.com/">C4 model</a></li>
+<li><a href="https://www.infoq.com/articles/C4-architecture-model/">The C4 Model for Software
+Architecture</a> -
+by Simon Brown</li>
 </ul>
 
                     </main>
