deploy: 3164519dd7e6cf582a478c6065ae908675998242

--- a/slides/project.html
+++ b/slides/project.html
@@ -97,7 +97,8 @@ Show with 1500 drones in Shenzhen, China</a></p>
 <li>with BDD-style acceptance criteria</li>
 </ul></li>
 <li>flowcharts</li>
-<li>static and dynamic models of the software (UML)</li>
+<li>first 3 level of C4</li>
+<li>also static and dynamic models of the software (UML)</li>
 <li>UI mockups</li>
 </ul>
 </div><div class="column" style="width:30%;">
@@ -105,6 +106,19 @@ Show with 1500 drones in Shenzhen, China</a></p>
 height="300" /></p>
 </div>
 </div>
+</section>
+<section id="diagrams-details" class="slide level2">
+<h2>diagrams details</h2>
+<ul>
+<li>create a user story map in details for one role’s set of features
+<ul>
+<li>for example the choreography design</li>
+</ul></li>
+<li>you don’t have to detail every single role
+<ul>
+<li>but give an overview of the system</li>
+</ul></li>
+</ul>
 </section>
 <section id="work-in-agile-methodology" class="slide level2">
 <h2>work in agile methodology</h2>
