--- a/print.html
+++ b/print.html
@@ -282,6 +282,11 @@ Diagram</a></li>
 <li><a href="lectures//software-engineering/slides/07_c4.html">C4</a></li>
 </ol>
 <h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
+<p>UML</p>
+<ul>
+<li><a href="https://www.geeksforgeeks.org/unified-modeling-language-uml-introduction/">Unified Modeling Language (UML)
+Diagrams</a></li>
+</ul>
 <p>C4 model</p>
 <ul>
 <li><a href="https://c4model.com/">C4 model</a></li>
@@ -289,6 +294,11 @@ Diagram</a></li>
 Architecture</a> -
 by Simon Brown</li>
 </ul>
+<h2 id="week-5"><a class="header" href="#week-5">week 5</a></h2>
+<ol>
+<li>week 4 summary</li>
+<li>SOLID</li>
+</ol>
 <div style="break-before: page; page-break-before: always;"></div><h1 id="schedule"><a class="header" href="#schedule">schedule</a></h1>
 <table>
 <colgroup>
@@ -3697,9 +3707,6 @@ alt="from c4model.com | CC-BY" />
 href="https://c4model.com/">c4model.com</a> | CC-BY</figcaption>
 </figure>
 <h1 id="level-2-container-diagram"><a class="header" href="#level-2-container-diagram">Level 2: Container diagram</a></h1>
-<ul>
-<li></li>
-</ul>
 <blockquote>
 <p>Zooms into the software system, and shows the containers
 (applications, data stores, microservices, etc.) that make up that
