--- a/lectures/HOME.html
+++ b/lectures/HOME.html
@@ -281,6 +281,11 @@ Diagram</a></li>
 <li><a href="/software-engineering/slides/07_c4.html">C4</a></li>
 </ol>
 <h4 id="readings-3"><a class="header" href="#readings-3">readings</a></h4>
+<p>UML</p>
+<ul>
+<li><a href="https://www.geeksforgeeks.org/unified-modeling-language-uml-introduction/">Unified Modeling Language (UML)
+Diagrams</a></li>
+</ul>
 <p>C4 model</p>
 <ul>
 <li><a href="https://c4model.com/">C4 model</a></li>
@@ -288,6 +293,11 @@ Diagram</a></li>
 Architecture</a> -
 by Simon Brown</li>
 </ul>
+<h2 id="week-5"><a class="header" href="#week-5">week 5</a></h2>
+<ol>
+<li>week 4 summary</li>
+<li>SOLID</li>
+</ol>
 
                     </main>
 
