deploy: b771948b17f71b6a16f5ec7572de32c9f3dce0b8

--- a/slides/project.html
+++ b/slides/project.html
@@ -69,7 +69,8 @@ Show with 1500 drones in Shenzhen, China</a></p>
 <ul>
 <li>introduction
 <ul>
-<li>team members</li>
+<li>what the software is – practically the project assignment</li>
+<li>team members – students working on the assignment</li>
 </ul></li>
 <li>stakeholder identification</li>
 <li>methodology</li>
@@ -98,7 +99,10 @@ Show with 1500 drones in Shenzhen, China</a></p>
 </ul></li>
 <li>flowcharts</li>
 <li>first 3 level of C4</li>
-<li>also static and dynamic models of the software (UML)</li>
+<li>also static and dynamic models of the software
+<ul>
+<li>UML</li>
+</ul></li>
 <li>UI mockups</li>
 </ul>
 </div><div class="column" style="width:30%;">
@@ -117,8 +121,13 @@ height="300" /></p>
 <li>you don’t have to detail every single role
 <ul>
 <li>but give an overview of the system</li>
+<li>illustrate the every roles and the connections between them</li>
 </ul></li>
 </ul>
+<blockquote>
+<p>overview first, zoom and filter, then details on demand</p>
+<p>– Ben Shneiderman</p>
+</blockquote>
 </section>
 <section id="work-in-agile-methodology" class="slide level2">
 <h2>work in agile methodology</h2>
