deploy: c79b70c29ca999b7bd2562012af7dc7c72d72419

--- a/slides/06_uml.html
+++ b/slides/06_uml.html
@@ -119,7 +119,8 @@
   <div class="reveal">
     <div class="slides">
 
-<section id="title-slide" data-background-color="#181d37">
+<section id="title-slide" data-background-color="#181d37" data-background-image="../assets/by-sa.svg" data-background-position="1.25rem
+calc(100% - 1.25rem)" data-background-size="125px">
   <h1 class="title">Unified Modeling Language</h1>
   <p class="author">Gergő Pintér, PhD</p>
   <p class="date">gergo.pinter@uni-corvinus.hu</p>
