deploy: de9e118e55881a05e1314db28fb6ac2dc36c0cc5

--- a/slides/08_patterns.html
+++ b/slides/08_patterns.html
@@ -136,10 +136,9 @@ class="title-slide slide level1">
 <figure>
 <img
 data-src="figures/the_software_design_and_architecture_stack_generalized.drawio.svg"
-height="475" alt="based on Khalil Stemmel’s figure stemmler2019how?" />
+height="475" alt="based on Khalil Stemmel’s figure [1]" />
 <figcaption aria-hidden="true">based on Khalil Stemmel’s figure <span
-class="citation"
-data-cites="stemmler2019how"><strong>stemmler2019how?</strong></span></figcaption>
+class="citation" data-cites="stemmler2019how">[1]</span></figcaption>
 </figure>
 </section>
 
@@ -154,7 +153,7 @@ Vlissides</li>
 <ul>
 <li>published in “Design Patterns: Elements of Reusable Object-Oriented
 Software” (1994) <span class="citation"
-data-cites="gamma1994design"><strong>gamma1994design?</strong></span></li>
+data-cites="gamma1994design">[2]</span></li>
 </ul></li>
 <li>provides solutions to common design problems</li>
 <li>categorized into three main groups
@@ -431,7 +430,7 @@ href="https://commons.wikimedia.org/wiki/File:CouplingVsCohesion.svg">Wikimedia<
 <div class="text-smaller mt-2">
 <p>source <a
 href="https://en.wikipedia.org/wiki/Coupling_(computer_programming)">Wikipedia</a>
-<span class="citation" data-cites="enwiki:1245630908">[1]</span></p>
+<span class="citation" data-cites="enwiki:1245630908">[3]</span></p>
 </div>
 </section>
 
@@ -596,8 +595,24 @@ architectures!</p>
 <section id="references" class="title-slide slide level1">
 <h1>references</h1>
 <div id="refs" class="references csl-bib-body" role="list">
+<div id="ref-stemmler2019how" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[1] </div><div class="csl-right-inline">K.
+Stemmler, <span>“How to learn software design and architecture.”</span>
+<a href="
+                    https://khalilstemmler.com/articles/software-design-architecture/full-stack-software-design
+                    " class="uri">
+                    https://khalilstemmler.com/articles/software-design-architecture/full-stack-software-design
+</a>, 28-Sep-2019.</div>
+</div>
+<div id="ref-gamma1994design" class="csl-entry" role="listitem">
+<div class="csl-left-margin">[2] </div><div class="csl-right-inline">E.
+Gamma, R. Helm, R. Johnson, and J. Vlissides, <em><a
+href="https://books.google.hu/books?id=6oHuKQe3TjQC">Design patterns:
+Elements of reusable object-oriented software</a></em>. Pearson
+Education, 1994.</div>
+</div>
 <div id="ref-enwiki:1245630908" class="csl-entry" role="listitem">
-<div class="csl-left-margin">[1] </div><div
+<div class="csl-left-margin">[3] </div><div
 class="csl-right-inline">Wikipedia contributors, <span>“Coupling
 (computer programming) — <span>Wikipedia</span><span>,</span> the free
 encyclopedia.”</span> <a
