deploy: 37e9a7abb524dc537e6abf62f86301f64f5ebbaa

--- a/slides/08_patterns.html
+++ b/slides/08_patterns.html
@@ -533,6 +533,20 @@ purpose</p>
 </div>
 </div>
 </section>
+<section id="architecture-v2.1---class" class="slide level2">
+<h2>architecture v2.1 - class</h2>
+<div class="columns">
+<div class="column" style="width:70%;">
+<p><img data-src="figures/user_statistics/class_3.svg"
+width="600" /></p>
+</div><div class="column mt-2" style="width:30%;">
+<p><img data-src="figures/user_statistics/server_client.drawio.svg"
+height="100" /></p>
+<p>UI might be on a client</p>
+<p>different code base, different language</p>
+</div>
+</div>
+</section>
 <section id="architecture-v3" class="slide level2">
 <h2>architecture v3</h2>
 <div class="columns">
